[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdllm"
version = "0.1.0"
description = "Prototype decentralized LLM marketplace with payment channels and dispute resolution"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
